# sunaba

./: README.md  init.sh
.github/workflows/: ci.yaml  frontend_ci.yaml
02-1/src/: Main.elm
c/c-playground/: Makefile  README.md  main.c
cmd/finderr/: main.go
cmd/src/: Main.elm
computer_science/data-structure-and-algorithm/: Makefile  README.md
computer_science/go-system-programming/: Makefile  README.md
counter/: package-lock.json
go/bbf-kubernetes/: .gitmodules
go/codecrafters-git-go/: Makefile  go.mod
go/distributed-services-with-go/: .gitignore  Makefile  README.md  air.toml  go.mod  go.sum
go/go-static-analysis/: Makefile  finderr.go  finderr_test.go  go.mod
go/jitsuyo-golang/: README.md  go.mod  hoge  main.go
html1/src/: Main.elm
kubernetes/bbf-kubernetes/: README.md
network/tinet/: README.md
python/python-playground/: Makefile
react/devchallenges-weather-app/: .gitignore  package.json
rust/learning-rust-from-concepts/: README.md
rust/nand2tetris/: .gitattributes  .gitignore  Makefile  README.md
rust/rust-json-decode-with-line-number/: Cargo.toml  README.md
rust/rust-playground_/: Makefile
rust/rust-playground_/chore/: Cargo.toml
rust/rust-playground_/chore/src/: main.rs
rust/rust-web-app-book/: .gitattributes  Cargo.toml  Makefile.toml  README.md
rust/rusty-journal/: Cargo.toml
scala/cop-bon/: .gitignore  build.sbt
scala/play-api-sample/: build.sbt
scala/play-hands-on-by-bizreach/: README.md  build.sbt
scala/play-next-beat-1/: .gitignore  README.md  build.sbt
scala/play-next-beat-2/: README.me  (+1 more)
(+483 files in other folders)
