[package]
name = "chore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.133"
reqwest = "0.12.9"
tokio = { version = "1", features = ["full"] }
update-informer = { version = "1.1", default-features = true, features = ["github"] }
